--- a/src/components/success/Success.css
+++ b/src/components/success/Success.css
@@ -1,7 +1,5 @@
 .success {
-    padding: 0 20%;
     text-align: center;
-    
     margin-bottom: 25px;
 }
 .success-div {
@@ -28,6 +26,7 @@
     background: white;
     width: 20%;
     margin: auto;
+    text-align: center;
     border-radius: 50px;
     padding: 25px 15px;
 }
